rimosse Assert dalla classe AtmImpl + sostituito new Double() con Double.valueOf perché deprecato